cms-clusters/portal/occlusters.com/deploy-portal/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: portal
  labels:
    app: portal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: portal
